[gd_scene load_steps=2 format=3 uid="uid://b2hlg1flgcknc"]

[ext_resource type="Script" path="res://Scripts/main_menu.gd" id="1_1rm1u"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1rm1u")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Drag & drop your pointcloud file or find it with the file browser"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileBrowserButton" type="Button" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "Browse"

[node name="PointcloudFileBrowser" type="FileDialog" parent="CenterContainer/VBoxContainer"]
title = "Open pointcloud file"
initial_position = 2
size = Vector2i(500, 400)
visible = true
ok_button_text = "Open"
file_mode = 0
access = 2

[connection signal="pressed" from="CenterContainer/VBoxContainer/FileBrowserButton" to="." method="_on_file_browser_button_pressed"]
[connection signal="file_selected" from="CenterContainer/VBoxContainer/PointcloudFileBrowser" to="." method="_on_pointcloud_file_browser_file_selected"]
